Adicionado style.css

--- a/HTML/marco_zero/recife_antigo.html
+++ b/HTML/marco_zero/recife_antigo.html
@@ -3,33 +3,49 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recife Antigo</title>
 </head>
 <header>
-    <img src="Assets/prefeitura-do-recife-pe.png" alt="Logo Recife" />
-    <h1>
-        Marco Zero - Recife
-    </h1>
-    <UL>
-        <div>
-            <h3>
-                <a href="index.html">
-                    Inicio
-                </a>
-                 -
-                <a href="recife_antigo.html">
-                    Recife Antigo
-                </a>
-                 -
-                Nossa História -
-                Hotéis -
-                Contato
-            </h3>
+    <nav>
+        <div class="title_style">
+            <img src="Assets/prefeitura-do-recife-pe.png" alt="Logo Recife" />
+            <h1>
+                Marco Zero - Recife
+            </h1>
         </div>
-        
-    </UL>
+        <UL class="menu_style">
+            <div>
+                <li>
+                    <a href="index.html">
+                        Inicio
+                    </a>
+                </li>
+                <li>
+                    <a href="recife_antigo.html">
+                        Recife Antigo
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Nossa História
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Hotéis
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Contato
+                    </a>
+                </li>
+            </div>
+        </UL>
+    </nav>
 </header>
 
 <body>
