--- a/HTML/marco_zero/index.html
+++ b/HTML/marco_zero/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco Zero</title>
 </head>
+
 <body>
     <header>
-        <img src="Assets/prefeitura-do-recife-pe.png" alt="Logo Recife" />
-        <h1>
-            Marco Zero - Recife
-        </h1>
-        <UL>
-            <div>
-                <h3>
-                    <a href="index.html">
-                        Inicio
-                    </a>
-                     -
-                    <a href="recife_antigo.html">
-                        Recife Antigo
-                    </a>
-                     -
-                    Nossa História -
-                    Hotéis -
-                    Contato
-                </h3>
+        <nav>
+            <div class="title_style">
+                <img src="Assets/prefeitura-do-recife-pe.png" alt="Logo Recife" />
+                <h1>
+                    Marco Zero - Recife
+                </h1>
             </div>
-        </UL>
+            <UL class="menu_style">
+                <div>
+                    <li>
+                        <a href="index.html">
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <a href="recife_antigo.html">
+                            Recife Antigo
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Nossa História
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Hotéis
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Contato
+                        </a>
+                    </li>
+                </div>
+            </UL>
+        </nav>
     </header>
     <main>
         <p>
-            O Marco Zero em Recife é um dos destinos históricos mais importantes do nordeste do país. A região reúne atrações históricas e culturais, centro de artesanato e ótimos restaurantes. Além disso, é o principal local do carnaval de Pernambuco, reunindo música, alegria e muita festa. A seguir, saiba mais detalhes sobre o destino.
+            O Marco Zero em Recife é um dos destinos históricos mais importantes do nordeste do país. A região reúne
+            atrações históricas e culturais, centro de artesanato e ótimos restaurantes. Além disso, é o principal local
+            do carnaval de Pernambuco, reunindo música, alegria e muita festa. A seguir, saiba mais detalhes sobre o
+            destino.
         </p>
         <img src="Assets/marco_zero.jpg" alt="Imagem Marco Zero" />
     </main>
@@ -46,7 +68,7 @@
             • Instagram
         </ol>
         <p>
-        Quer receber dicas no seu e-mail? Inscreva-se!
+            Quer receber dicas no seu e-mail? Inscreva-se!
         </p>
         <form action="/">
             <label for="nome">
@@ -72,4 +94,5 @@
 
     </footer>
 </body>
+
 </html>
