Atualizado style.css

--- a/HTML/marco_zero/index.html
+++ b/HTML/marco_zero/index.html
@@ -50,13 +50,19 @@
         </nav>
     </header>
     <main>
-        <p>
-            O Marco Zero em Recife é um dos destinos históricos mais importantes do nordeste do país. A região reúne
-            atrações históricas e culturais, centro de artesanato e ótimos restaurantes. Além disso, é o principal local
-            do carnaval de Pernambuco, reunindo música, alegria e muita festa. A seguir, saiba mais detalhes sobre o
-            destino.
-        </p>
-        <img src="Assets/marco_zero.jpg" alt="Imagem Marco Zero" />
+        <article>
+            <h1 class="main_title_h1">
+                Sobre o Marco Zero
+            </h1>
+            <h3 class="main_h3">
+                O Marco Zero em Recife é um dos destinos históricos mais importantes do nordeste do país. A região reúne
+                atrações históricas e culturais, centro de artesanato e ótimos restaurantes. Além disso, é o principal
+                local
+                do carnaval de Pernambuco, reunindo música, alegria e muita festa. A seguir, saiba mais detalhes sobre o
+                destino.
+            </h3>
+            <img src="Assets/marco_zero.jpg" alt="Imagem Marco Zero" width="600" class="main_img"/>
+        </article>
     </main>
     <footer>
         <p>
