Atualizado style.css e index.html

--- a/HTML/marco_zero/index.html
+++ b/HTML/marco_zero/index.html
@@ -61,43 +61,52 @@
                 do carnaval de Pernambuco, reunindo música, alegria e muita festa. A seguir, saiba mais detalhes sobre o
                 destino.
             </h3>
-            <img src="Assets/marco_zero.jpg" alt="Imagem Marco Zero" width="600" class="main_img"/>
+            <img src="Assets/marco_zero.jpg" alt="Imagem Marco Zero" width="600" class="main_img" />
         </article>
     </main>
     <footer>
-        <p>
-            Nos siga nas rede sociais:
-        </p>
-        <ol>
-            • Twitter
-            • Facebook
-            • Instagram
-        </ol>
-        <p>
-            Quer receber dicas no seu e-mail? Inscreva-se!
-        </p>
-        <form action="/">
-            <label for="nome">
-                Nome:
-            </label>
-            <input type="text" placeholder="Nome completo" id="nome" name="username">
+        <nav>
+            <h1>
+                Nos siga nas rede sociais:
+            </h1>
+            <ol>
+                <li>
+                    Twitter
+                </li>
+                <li>
+                    Facebook
+                </li>
+                <li>
+                    Instagram
+                </li>
+            </ol>
+            <form action="/">
+            <h1>
+                Quer receber dicas no seu e-mail? Inscreva-se!
+            </h1>
             <p>
-                <label for="email">
-                    Email:
+                <label for="nome">
+                    Nome:
                 </label>
-                <input type="text" placeholder="seuemail@provedor.com.br" id="email" name="email">
+                <input type="text" placeholder="Nome completo" id="nome" name="username">
             </p>
-            <p>
-                <label for="inscricao">
-                    Deseja se inscrever em nossa lista de promoções? Ative a caixa
-                </label>
-                <input type="checkbox" placeholder="Sim" id="inscricao" name="inscricao">
-            </p>
-            <button type="submit">
-                Enviar
-            </button>
-        </form>
-
+                <p>
+                    <label for="email">
+                        Email:
+                    </label>
+                    <input type="text" placeholder="seuemail@provedor.com.br" id="email" name="email">
+                </p>
+                <p>
+                    <label for="inscricao">
+                        Deseja se inscrever em nossa lista de promoções? Ative a caixa
+                    </label>
+                    <input type="checkbox" placeholder="Sim" id="inscricao" name="inscricao">
+                </p>
+                <button type="submit">
+                    Enviar
+                </button>
+            </form>
+        </nav>
     </footer>
 </body>
 
