Atualizado index.html e recife_antigo.html

--- a/HTML/marco_zero/recife_antigo.html
+++ b/HTML/marco_zero/recife_antigo.html
@@ -50,10 +50,12 @@
 
 <body>
     <main>
-        <h1>
+        <article>
+        <h1 class="main_title_h1">
             Recife Antigo
         </h1>
         <p>
+            <h3 class="main_h3">
             <nav>
             O Recife antigo corresponde “apenas” à toda parte leste do centro histórico da capital pernambucana, com diversos atrativos. Também está inserido no Complexo Turístico Cultural Recife e Olinda, desenvolvida pela empresa Parque Expo.
             </nav>
@@ -69,75 +71,88 @@
             <nav>
             O bairro existe desde o tempo de colonização dos holandeses, em 1637. Porém, demorou-se muito mais anos para que ele pudesse ter algum tipo de planejamento e construções. Originalmente, tinha uma área territorial de aproximadamente 10 hectares.
             </nav>
+        </h3>
         </p>
-        <h3>
+        </article>
+        <article>
+        <h3 class="main_title_h1">
             Confira a lista de cidades do recife antigo que ainda são locais frequentados no turismo:
         </h3>
         <ol>
-            <h4>
+            <h4 class="main_h3">
                 1 - Parque das Esculturas Francisco Brennand
             </h4>
-                <p>
+                <p class="main_h3">
                 Também é algo notável por lá, até por estar em um tipo de píer. Ele foi construído em 2000 e conta com 90 esculturas, tendo a Coluna de Cristal como principal. Ela na verdade possui 32 metros de altura.
                 </p>
-                <img src="Assets/Parque das Esculturas Francisco Brennand.jpg" alt="Parque das Esculturas Francisco Brennand" />
-            <h4>
+                <img src="Assets/Parque das Esculturas Francisco Brennand.jpg" alt="Parque das Esculturas Francisco Brennand" class="main_img" width="600"/>
+            <h4 class="main_h3">
                 2 - Museu e Centro Cultural Cais do Sertão
             </h4>
-                <p>
+                <p class="main_h3">
                     Um estabelecimento que homenageia toda a cultura nordestina. Lá, poderá encontrar o Cais do Sertão, que ilustra de diversos modos a obra de Luiz Gonzaga.
                 </p>
-                <img src="Assets/Museu e Centro Cultural Cais do Sertão.jpg" alt="Parque das Esculturas Francisco Brennand" />
-            <h4>
+                <img src="Assets/Museu e Centro Cultural Cais do Sertão.jpg" alt="Parque das Esculturas Francisco Brennand" class="main_img" width="600"/>
+            </article>
+            <h4 class="main_title_h1">
                 Interessante Saber
             </h4>
-                <p>
-                    <nav>
+                <p class="main_h3">
+                    <nav class="main_h3">
                     Prefira andar de Uber, ou procure taxis confiáveis, uma vez que você pode entrar em qualquer carro e acabar em algum beco para ser assaltado.
                     </nav>
-                    <nav>
+                    <nav class="main_h3">
                     Se pretende se movimentar com o próprio carro, cuidado ao parar nos faróis, feche os vidros e trave as portas e também tenha atenção ao se guiar por aplicativos, uma vez que eles sempre indicam caminhos alternativos e te levar para bairros nada seguros.
                     </nav>
-                    <nav>
+                    <nav class="main_h3">
                     Caso visite o Recife Antigo com carro próprio, o ideal é parar em estacionamento (custo médio de R$10 por 4 horas). Se decidir parar na rua, não esqueça de comprar o cartão de zona azul, que também pode ser adquirido pelo aplicativo.
                     </nav>
                 </p> 
         </ol>
     </main>
     <footer>
-        <p>
-            Nos siga nas rede sociais:
-        </p>
-        <ol>
-            • Twitter
-            • Facebook
-            • Instagram
-        </ol>
-        <p>
-        Quer receber dicas no seu e-mail? Inscreva-se!
-        </p>
-        <form action="/">
-            <label for="nome">
-                Nome:
-            </label>
-            <input type="text" placeholder="Nome completo" id="nome" name="username">
-            <p>
-                <label for="email">
-                    Email:
-                </label>
-                <input type="text" placeholder="seuemail@provedor.com.br" id="email" name="email">
-            </p>
-            <p>
-                <label for="inscricao">
-                    Deseja se inscrever em nossa lista de promoções? Ative a caixa
-                </label>
-                <input type="checkbox" placeholder="Sim" id="inscricao" name="inscricao">
-            </p>
-            <button type="submit">
-                Enviar
-            </button>
-        </form>
-
+        <nav>
+            <h1>
+                Nos siga nas rede sociais:
+            </h1>
+            <ol>
+                <li>
+                    Twitter
+                </li>
+                <li>
+                    Facebook
+                </li>
+                <li>
+                    Instagram
+                </li>
+            </ol>
+            <form action="/">
+                <h1>
+                    Quer receber dicas no seu e-mail? Inscreva-se!
+                </h1>
+                <p>
+                    <label for="nome">
+                        Nome:
+                    </label>
+                    <input type="text" placeholder="Nome completo" id="nome" name="username">
+                </p>
+                <p>
+                    <label for="email">
+                        Email:
+                    </label>
+                    <input type="text" placeholder="seuemail@provedor.com.br" id="email" name="email">
+                </p>
+                <p>
+                    <label for="inscricao">
+                        Deseja se inscrever em nossa lista de promoções? Ative a caixa
+                    </label>
+                    <input type="checkbox" placeholder="Sim" id="inscricao" name="inscricao">
+                </p>
+                <button type="submit">
+                    Enviar
+                </button>
+            </form>
+        </nav>
     </footer>
 </body>
 
