--- a/JavaScript/Exercício 8/index.html
+++ b/JavaScript/Exercício 8/index.html
@@ -21,7 +21,7 @@
         <input type="password" id="login-senha" name="login-senha" value="senha" class="">
         <p class="error-text">*Sennha incorreta</p>
 
-        <button type="button">Fazer login</button>
+        <button onclick="validarForms()" type="button">Fazer login</button>
       </form>
     </section>
   </main>
